--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -67,15 +67,6 @@ jobs:
 
       - name: Copy all OWL files to be deployed
         run: sudo cp -n ./owl/*.owl $GITHUB_WORKSPACE/build/owl/current
-
-      - name: Metrics
-        run: sudo ./scripts/OntoMetrics.sh $GITHUB_WORKSPACE/build/owl/current/SOMA.owl $GITHUB_WORKSPACE/build/files
-
-      - name: Upload Metrics
-        uses: actions/upload-artifact@v1
-        with:
-          name: Metrics
-          path: ./build/files/metrics.json
       
       - name: Compile NEEM Handbook
         uses: docker://blang/latex:ubuntu
@@ -84,15 +75,6 @@ jobs:
       
       - name: Copy NEEM Handbook
         run: sudo cp $GITHUB_WORKSPACE/docs/NEEM-handbook/main.pdf $GITHUB_WORKSPACE/build/files/NEEM-Handbook.pdf
-      
-      - name: Deploy files current
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        if: github.ref == 'refs/heads/master'
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: build/files
-          TARGET_FOLDER: /files/current
 
       - name: Deploy owl current
         uses: JamesIves/github-pages-deploy-action@releases/v3
@@ -114,6 +96,24 @@ jobs:
           #TARGET_FOLDER: owl/${{ GITHUB_REF/refs\/tags\// }}
           #TARGET_FOLDER: owl/${{ GITHUB_REF#refs/tags/ }}
 
+      - name: Metrics
+        run: sudo ./scripts/OntoMetrics.sh https://raw.githubusercontent.com/${{ github.repository }}/gh-pages/owl/current/SOMA.owl $GITHUB_WORKSPACE/build/files
+
+      - name: Upload Metrics
+        uses: actions/upload-artifact@v1
+        with:
+          name: Metrics
+          path: ./build/files/metrics.json
+
+      - name: Deploy files current
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        if: github.ref == 'refs/heads/master'
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: build/files
+          TARGET_FOLDER: /files/current
+
       - name: Deploy files tag
         uses: JamesIves/github-pages-deploy-action@releases/v3
         if: startsWith(github.ref, 'refs/tags/')
@@ -128,3 +128,4 @@ jobs:
       - name: Deploy failure
         if: failure()
         run: echo Deployment failed. If the other steps succeeded, maybe no ACCESS_TOKEN was set?
+
