--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -121,7 +121,7 @@ jobs:
 
       - name: Evaluate Konclude output
         if: success()
-        uses: docker://python:3.7.6-slim
+        uses: docker://konclude/konclude
         with:
-          args: python ./scripts/konclude_test.py -k ./.github/actions/Konclude -s ./build/SOMA-HOME.owl -o ./owl/konclude.html ./build/konclude.output
+          args: python ./scripts/konclude_test.py -p $PWD/properties/SOMA-HOM_objectProperties -k ./.github/actions/Konclude -s ./build/SOMA-HOME.owl -o ./owl/konclude.html ./build/konclude.output
 
